--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -1,6 +1,6 @@
 //UserData
 ldap = 60076220
-password = secret
+password = 11GshjkmrfK
 username = \u0410\u043D\u0442\u043E\u043D \u0421\u043A\u043B\u044F\u0440\u043E\u0432
 
 //Envirement
