--- a/src/main/resources/resources.properties
+++ b/src/main/resources/resources.properties
@@ -4,8 +4,8 @@ password = secret
 username = \u0410\u043D\u0442\u043E\u043D \u0421\u043A\u043B\u044F\u0440\u043E\u0432
 
 //Envirement
-test = https://magportal-dev-magfront-stage.apps.lmru.tech/orders/orders_v2
-preprod = https://magportal-preprod-magfront-stage.apps.lmru.tech/orders/orders_v2
+test = https://magportal-dev-magfront-stage.apps.lmru.tech/orders/orders_v2/
+preprod = https://magportal-preprod-magfront-stage.apps.lmru.tech/orders/orders_v2/
 
 //BrowserSetting
 chrome = Chrome
