--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <version>6.14.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-java-commons</artifactId>
+            <version>2.19.0</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
